// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField snapshots should match snapshot when disabled 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#1C1C1C",
        "fontSize": 14,
        "fontWeight": 600,
        "lineHeight": 22.4,
      }
    }
  >
    Disabled Field
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#D9D9D9",
        "borderColor": "#4E4E4E",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <TextInput
      accessibilityHint="Enter text here"
      accessibilityState={
        {
          "disabled": true,
        }
      }
      aria-label="Text input field"
      autoCapitalize="sentences"
      autoCorrect={true}
      blurOnSubmit={true}
      keyboardType="default"
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onContentSizeChange={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#686868"
      readOnly={true}
      secureTextEntry={false}
      style={
        {
          "color": "#1C1C1C",
          "flex": 1,
          "fontFamily": "text",
          "fontSize": 16,
          "gap": 10,
          "height": 20,
          "paddingVertical": 0,
          "width": "100%",
        }
      }
      textContentType="none"
      underlineColorAndroid="transparent"
      value="disabled value"
    />
  </View>
</View>
`;

exports[`TextField snapshots should match snapshot with all props 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#1C1C1C",
        "fontSize": 14,
        "fontWeight": 600,
        "lineHeight": 22.4,
      }
    }
  >
    Test Title
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 2,
      }
    }
  >
    <View
      brand={false}
      color="#BD1111"
      duotone={false}
      light={false}
      name="triangle-exclamation"
      regular={false}
      sharp={false}
      size={12}
      solid={true}
      thin={false}
    />
    <View
      style={
        {
          "marginLeft": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#BD1111",
            "fontSize": 12,
          }
        }
      >
        Error text
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D33232",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <TextInput
      accessibilityHint="Enter text here"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      aria-label="Text input field"
      autoCapitalize="sentences"
      autoCorrect={true}
      blurOnSubmit={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onContentSizeChange={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Enter text"
      placeholderTextColor="#686868"
      readOnly={false}
      secureTextEntry={false}
      style={
        {
          "color": "#1C1C1C",
          "flex": 1,
          "fontFamily": "text",
          "fontSize": 16,
          "gap": 10,
          "height": 20,
          "paddingVertical": 0,
          "width": "100%",
        }
      }
      textContentType="none"
      underlineColorAndroid="transparent"
      value="test value"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      aria-role="button"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        brand={false}
        color="#1C1C1C"
        duotone={false}
        light={false}
        name="check"
        regular={false}
        sharp={false}
        size={16}
        solid={true}
        thin={false}
      />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 2,
      }
    }
  >
    <Text
      style={
        {
          "color": "#1C1C1C",
          "fontSize": 12,
          "lineHeight": 16,
        }
      }
    >
      Helper text
    </Text>
  </View>
</View>
`;

exports[`TextField snapshots should match snapshot with default props 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#9A9A9A",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <TextInput
      accessibilityHint="Enter text here"
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      aria-label="Text input field"
      autoCapitalize="sentences"
      autoCorrect={true}
      blurOnSubmit={true}
      keyboardType="default"
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onContentSizeChange={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#686868"
      secureTextEntry={false}
      style={
        {
          "color": "#1C1C1C",
          "flex": 1,
          "fontFamily": "text",
          "fontSize": 16,
          "gap": 10,
          "height": 20,
          "paddingVertical": 0,
          "width": "100%",
        }
      }
      textContentType="none"
      underlineColorAndroid="transparent"
      value="test value"
    />
  </View>
</View>
`;

exports[`TextField snapshots should match snapshot with error state 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#1C1C1C",
        "fontSize": 14,
        "fontWeight": 600,
        "lineHeight": 22.4,
      }
    }
  >
    Error Field
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 2,
      }
    }
  >
    <View
      brand={false}
      color="#BD1111"
      duotone={false}
      light={false}
      name="triangle-exclamation"
      regular={false}
      sharp={false}
      size={12}
      solid={true}
      thin={false}
    />
    <View
      style={
        {
          "marginLeft": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#BD1111",
            "fontSize": 12,
          }
        }
      >
        This field is required
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D33232",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <TextInput
      accessibilityHint="Enter text here"
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      aria-label="Text input field"
      autoCapitalize="sentences"
      autoCorrect={true}
      blurOnSubmit={true}
      keyboardType="default"
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onContentSizeChange={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#686868"
      secureTextEntry={false}
      style={
        {
          "color": "#1C1C1C",
          "flex": 1,
          "fontFamily": "text",
          "fontSize": 16,
          "gap": 10,
          "height": 20,
          "paddingVertical": 0,
          "width": "100%",
        }
      }
      textContentType="none"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`TextField snapshots should match snapshot with multiline 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#1C1C1C",
        "fontSize": 14,
        "fontWeight": 600,
        "lineHeight": 22.4,
      }
    }
  >
    Multiline Field
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#9A9A9A",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <TextInput
      accessibilityHint="Enter text here"
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      aria-label="Text input field"
      autoCapitalize="sentences"
      autoCorrect={true}
      blurOnSubmit={true}
      keyboardType="default"
      multiline={true}
      numberOfLines={3}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onContentSizeChange={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#686868"
      secureTextEntry={false}
      style={
        {
          "color": "#1C1C1C",
          "flex": 1,
          "fontFamily": "text",
          "fontSize": 16,
          "gap": 10,
          "height": 120,
          "paddingVertical": 0,
          "width": "100%",
        }
      }
      textContentType="none"
      underlineColorAndroid="transparent"
      value="line 1\\nline 2"
    />
  </View>
</View>
`;
